; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_acontrast.c_filter_dblp.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_acontrast.c_filter_dblp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_PI_2 = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i8**, i32, i32, float)* @filter_dblp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filter_dblp(i8** %0, i8** %1, i32 %2, i32 %3, float %4) #0 {
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca float, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca double*, align 8
  %14 = alloca double*, align 8
  %15 = alloca double, align 8
  store i8** %0, i8*** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store float %4, float* %10, align 4
  store i32 0, i32* %12, align 4
  br label %16

16:                                               ; preds = %63, %5
  %17 = load i32, i32* %12, align 4
  %18 = load i32, i32* %9, align 4
  %19 = icmp slt i32 %17, %18
  br i1 %19, label %20, label %66

20:                                               ; preds = %16
  %21 = load i8**, i8*** %7, align 8
  %22 = load i32, i32* %12, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8*, i8** %21, i64 %23
  %25 = load i8*, i8** %24, align 8
  %26 = bitcast i8* %25 to double*
  store double* %26, double** %13, align 8
  %27 = load i8**, i8*** %6, align 8
  %28 = load i32, i32* %12, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i8*, i8** %27, i64 %29
  %31 = load i8*, i8** %30, align 8
  %32 = bitcast i8* %31 to double*
  store double* %32, double** %14, align 8
  store i32 0, i32* %11, align 4
  br label %33

33:                                               ; preds = %59, %20
  %34 = load i32, i32* %11, align 4
  %35 = load i32, i32* %8, align 4
  %36 = icmp slt i32 %34, %35
  br i1 %36, label %37, label %62

37:                                               ; preds = %33
  %38 = load double*, double** %13, align 8
  %39 = load i32, i32* %11, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds double, double* %38, i64 %40
  %42 = load double, double* %41, align 8
  %43 = load double, double* @M_PI_2, align 8
  %44 = fmul double %42, %43
  store double %44, double* %15, align 8
  %45 = load double, double* %15, align 8
  %46 = load float, float* %10, align 4
  %47 = load double, double* %15, align 8
  %48 = fmul double %47, 4.000000e+00
  %49 = call float @sin(double %48)
  %50 = fmul float %46, %49
  %51 = fpext float %50 to double
  %52 = fadd double %45, %51
  %53 = call float @sin(double %52)
  %54 = fpext float %53 to double
  %55 = load double*, double** %14, align 8
  %56 = load i32, i32* %11, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds double, double* %55, i64 %57
  store double %54, double* %58, align 8
  br label %59

59:                                               ; preds = %37
  %60 = load i32, i32* %11, align 4
  %61 = add nsw i32 %60, 1
  store i32 %61, i32* %11, align 4
  br label %33

62:                                               ; preds = %33
  br label %63

63:                                               ; preds = %62
  %64 = load i32, i32* %12, align 4
  %65 = add nsw i32 %64, 1
  store i32 %65, i32* %12, align 4
  br label %16

66:                                               ; preds = %16
  ret void
}

declare dso_local float @sin(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
